kubernetes/lobby-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lobby-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app : lobby
  template:
    metadata:
      labels:
        app: lobby
    spec:
      containers:
      - name: lobby
        image: moviecupidon/lobby-service:1.0.0-SNAPSHOT
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: lobby-service
  labels:
    app: lobby
spec:
  selector:
    app: lobby
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
