kubernetes/testing-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app : test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: mendhak/http-https-echo
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: test-service
  labels:
    app: test
spec:
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
